--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
 about: >
     I am senior CS undergrad at BITS Pilani, currently interning at PayPal. I write here about whatever I am currently working on. To know more about me:
 master_repo: false
-url: ""
+url: "adarsh0112.github.io"
 markdown: kramdown
 highlighter: rouge
 
