--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ owner:
   avatar:         "https://avatars2.githubusercontent.com/u/8530512?s=400&u=b5ddb96f73e76a0fe3ba049992a756d2f6c7b6b5&v=4"
   email:          "adarsh0112@gmail.com"
   # Social networking links used in footer. Update and remove as you like.
-  facebook: adarsh0112
+  #facebook: adarsh0112
   twitter: adarshs_
   github: https://github.com/adarsh0112
   stackexchange:
