--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ owner:
   email:          "adarsh0112@gmail.com"
   # Social networking links used in footer. Update and remove as you like.
   #facebook: adarsh0112
-  twitter: adarshs_
+  twitter: https://twitter.com/adarshs_
   github: https://github.com/adarsh0112
   stackexchange:
   linkedin: https://www.linkedin.com/in/adarsh0112
