--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,16 @@
-theme: jekyll-theme-minimal
+title: Adarsh's Blog
+author: Adarsh Srivastava
+email: adarsh0112@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+# social links
+twitter_username: adarshs_
+github_username:  adarsh0112
+facebook_username: adarsh0112
+instagram_username: _adarshsrivastava
+
+show_excerpts: true # set to false to remove excerpts on the homepage
+
+theme: minima
