--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,83 @@
-title: Adarsh's Blog
-author: Adarsh Srivastava
-email: adarsh0112@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-# social links
-twitter_username: adarshs_
-github_username:  adarsh0112
-facebook_username: adarsh0112
-instagram_username: _adarshsrivastava
+# # # # # # # # # # # # #
+#   K i k o - p l u s   #
+# # # # # # # # # # # # #
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+# Basic
+name:               "Adarsh Srivastava's Blog"
 
-theme: minima
+author:
+  facebook:         adarsh0112
+  twitter:          adarshs_
+  github:           adarsh0112
+  linkedin:         adarsh0112
+  email:            adarsh0112@gmail.com
+
+copyright:
+  year:             2019
+  name:             Adarsh Srivastava
+
+# Google-analytics
+google-analytics:
+  id:               "UA-138767520-1"
+
+# Disqus
+# disqus:
+#   id:               "kiko-plus"
+
+# URL
+url:                "https://adarshsrivastava.in" # the base hostname & protocol for your site
+# url:                "http://localhost:4000" # use this url when you develop
+baseurl:            "" # the subpath of your site, e.g. /blog
+
+
+# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:           Asia/Kolkata
+permalink:          /:year-:month-:day/:title/
+
+# Pagination
+paginate:           10
+paginate_path:      /page:num/
+
+# Markdown
+markdown:           kramdown
+kramdown:
+  input:            GFM
+
+# Navigation
+nav:
+  - name:           "Hi"
+    url:            "/about"
+  - name:           "Archive"
+    url:            "/archive"
+  - name:           "Tags"
+    url:            "/tags"
+  - name:           "books"
+    url:            "https://www.goodreads.com/adarsh0112"
+
+# Sass
+sass:
+  sass_dir:         _sass
+  style:            :compressed
+
+# Scopes
+defaults:
+  -
+    scope:
+      path:         ""
+      type:         "pages"
+    values:
+      layout:       "page"
+  -
+    scope:
+      path:         ""
+      type:         "posts"
+    values:
+      layout:       "post"
+
+# jekyll-seo-tag, see: http://www.rubydoc.info/gems/jekyll-seo-tag/1.2.0
+gems:
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-admin
+
+exclude:            [vendor]
