--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ google-analytics:
 #   id:               "kiko-plus"
 
 # URL
-url:                "https://adarshsrivastava.dev" # the base hostname & protocol for your site
+url:                "https://www.adarshs.dev" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
 baseurl:            "" # the subpath of your site, e.g. /blog
 
