Removed fb and twitter; icon updates

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 name:               "Adarsh Srivastava's Blog"
 
 author:
-  facebook:         adarsh0112
-  twitter:          adarshs_
+#  facebook:         adarsh0112
+#  twitter:          adarshs_
   github:           adarsh0112
   linkedin:         adarsh0112
   email:            adarsh@adarshs.dev
