Year and goodreads handle change

--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ author:
   github:           adarsh0112
   linkedin:         adarsh0112
   email:            adarsh@adarshs.dev
-  goodreads:        adarsh0112
+  goodreads:        adarshsrivastava
 
 copyright:
-  year:             2019
+  year:             2020
   name:             Adarsh Srivastava
 
 # Google-analytics
