--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
 #  twitter:          adarshs_
   github:           adrshsrvstv
   linkedin:         adrshsrvstv
-  email:            adarsh@adarshs.dev
+  email:            hi@adrshsrvstv.com
   goodreads:        adrshsrvstv
 
 copyright:
@@ -31,7 +31,7 @@ lang:               "en_US"
 #   id:               "kiko-plus"
 
 # URL
-url:                "https://www.adarshs.dev" # the base hostname & protocol for your site
+url:                "https://adrshsrvstv.com" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
 baseurl:            "" # the subpath of your site, e.g. /blog
 
