--- a/_config.yml
+++ b/_config.yml
@@ -53,13 +53,13 @@ kramdown:
 nav:
   - name:           "Hi"
     url:            "/about"
-  - name:           "Archive"
+  - name:           "archive"
     url:            "/archive"
-  - name:           "Tags"
+  - name:           "tags"
     url:            "/tags"
-  - name:           "Projects"
+  - name:           "projects"
     url:            "/projects"
-  - name:           "resumé"
+  - name:           "cv"
     url:            "/assets/docs/resume.pdf"
   - name:           "books"
     url:            "https://www.goodreads.com/adrshsrvstv"
